Fix button alignment

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -31,3 +31,6 @@ a:focus
 
 .button-rounded
   border-radius 2em
+
+.pure-form button[type=submit]
+  margin 0
